[Bugfix] fix Task6 and Task8 wrong output